# MLOps_PortfolioOptimization

./: Makefile  README.md  cloudbuild.yaml  program.prof  pyproject.toml
.github/workflows/: tests.yml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
portfolio/: .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  config-predict.yaml  config.yaml  data.dvc  path_to_model.pkl  predict.dockerfile  prometheus.dockerfile  prometheus.yml  pyproject.toml  requirements.txt  test_data.csv  trainer.dockerfile
portfolio/.dvc/: config
portfolio/.github/workflows/: tests.yml
portfolio/app/: api.py
portfolio/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
portfolio/docs/: mkdocs.yaml
portfolio/models/: benchmark.pkl
portfolio/notebooks/: test.ipynb
portfolio/reports/: README.md  mlops.drawio  report.csv  report.html  summary.csv
portfolio/reports/figures/: plot_composition.json  plot_cumulative_returns.json
portfolio/src/: predict_model.py  test.ipynb  train_model.py
portfolio/src/config/: params.yaml
portfolio/src/data/: make_dataset.py
portfolio/tests/: __init__.py  test_dataset.py  test_model.py  test_prediction.py
portfolio/uploads/: X_test.csv
portfolio/visualizations/: mlops.drawio  summary.csv
portfolio_optimization/: __init__.py
wandb/run-20240117_184458-dsb1vs8u/: run-dsb1vs8u.wandb
wandb/run-20240117_184936-fjq6zp9o/: run-fjq6zp9o.wandb
wandb/run-20240117_195106-zomuqwaq/: run-zomuqwaq.wandb
wandb/run-20240117_233105-0uyxakxe/: run-0uyxakxe.wandb
(+18 files in other folders)
