[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_optimization"
version = "0.0.1"
description = "In this project we build, fine-tune, and cross-validate portfolio models."
authors = [
  { name = "G11", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["portfolio_optimization"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
